tests/ui/parser/issues/issue-84148-2.rs
//~v ERROR this file contains an unclosed delimiter
fn f(t:for<>t?
